[Minor fix] add some more gap between paragraph on home page and fix line height for timeline

--- a/src/assets/css/Timeline.css
+++ b/src/assets/css/Timeline.css
@@ -4,8 +4,7 @@
   opacity: 0.5;
   background: #000;
   width: 2px;
-  height: 126%;
-  top: 20%;
+  height: calc(100% + 20px);
   left: 5px;
   transform: translateX(-50%);
 }
